= Changelog
== Version 1.2.0 2009-09-13

* have TyrantInstance use TyrantTable or Tyrant as appropriate for the connection
* WARN if the configured lua extension file is missing

== Version 1.1.0 2009-08-10

* change 'status' command to 'process-status'
* add 'replication-status' command
* fix gem dependencies

== Version 1.0.9 2009-08-01

* First public versioned release

== Version 1.0.8

* start the instance in the context of its home directory

== Version 1.0.7

* do not attempt to stop servers where there is no pid file

== Version 1.0.6 

* updates to list command

== Version 1.0.4

* fix db name on ttserver commandline, make sure opts/mode/etc are correct 

== Version 1.0.1

* fix default home directory in cli

== Version 1.0.0

* Initial release