@@ -3,6 +3,7 @@
 
 * have TyrantInstance use TyrantTable or Tyrant as appropriate for the connection
 * WARN if the configured lua extension file is missing
+* add in configuration of indexes for Table databases
 
 == Version 1.1.0 2009-08-10
 
